// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder text: can insert placeholder 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "text": "Fill this in...",
          },
          "type": "placeholder",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`placeholder text: can type inside placeholder and replace with text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is my text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
